--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.form {
+  @apply p-2;
+}
+
+.form label {
+  @apply block text-gray-700 text-sm font-bold mb-1;
+}
+
+.form input {
+  @apply shadow appearance-none border border-red-500 rounded w-full py-1 px-2 text-gray-700 mb-1 leading-tight focus:outline-none focus:shadow-outline;
+}
+
+.button {
+  @apply bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 mt-2 rounded focus:outline-none focus:shadow-outline
+}
