--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,11 @@
 @tailwind utilities;
 
 .form {
-  @apply p-2;
+  @apply flex flex-wrap p-2;
+}
+
+.form .control {
+  @apply w-full md:w-1/2 px-2;
 }
 
 .form label {
@@ -11,7 +15,7 @@
 }
 
 .form input {
-  @apply shadow appearance-none border border-red-500 rounded w-full py-1 px-2 text-gray-700 mb-1 leading-tight focus:outline-none focus:shadow-outline;
+  @apply shadow appearance-none border border-red-500 rounded py-1 px-2  w-full text-gray-700 mb-1 leading-tight focus:outline-none focus:shadow-outline;
 }
 
 .button {
