--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,45 @@
 .button {
   @apply bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 mt-2 rounded focus:outline-none focus:shadow-outline
 }
+
+.spinner {
+    transform: scale(var(--ggs, 1))
+}
+
+.spinner,
+.spinner::after,
+.spinner::before {
+    box-sizing: border-box;
+    position: relative;
+    display: block;
+    width: 20px;
+    height: 20px
+}
+
+.spinner::after,
+.spinner::before {
+    content: "";
+    position: absolute;
+    border-radius: 100px
+}
+
+.spinner::before {
+    animation: spinner 1s cubic-bezier(.6, 0, .4, 1) infinite;
+    border: 3px solid transparent;
+    border-top-color: currentColor
+}
+
+.spinner::after {
+    border: 3px solid;
+    opacity: .2
+}
+
+@keyframes spinner {
+    0% {
+        transform: rotate(0deg)
+    }
+
+    to {
+        transform: rotate(359deg)
+    }
+}
